--- a/Frontend/Adventurush/package.json
+++ b/Frontend/Adventurush/package.json
@@ -14,7 +14,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-multi-carousel": "^2.8.4",
+    "react-router-dom": "^6.22.3",
     "react-slick": "^0.30.2",
+    "rrd": "^1.0.1",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
